Made second task for semantic layout

--- a/02-dz0/01-semantic-mockup/solution.html
+++ b/02-dz0/01-semantic-mockup/solution.html
@@ -1,4 +1,55 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <!-- Ваше решение -->
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dz02</title>
+    <link rel="stylesheet" href="./normalise.css">
+    <link rel="stylesheet" href="./styles.css">
+</head>
+<body>
+    <header class="header">
+        <h1>Header</h1>
+    </header>
+
+    <nav class="header-menu">
+        <ul class="header-menu__list">
+            <li class="header-menu__item">
+                <a class="header-menu__link" href="/">Navigation 1</a>
+            </li>
+
+            <li class="header-menu__item">
+                <a class="header-menu__link" href="/">Navigation 2</a>
+            </li>
+
+            <li class="header-menu__item">
+                <a class="header-menu__link" href="/">Navigation 3</a>
+            </li>
+        </ul>
+    </nav>
+
+    <main class="container-article container">
+        <article class="container-article__block">
+            <h2 class="container-article__header">Article 1</h2>
+            <ul class="container-article__list unordered">
+                <li class="container-article__item">Оригинальная трилогия</li>
+                <li class="container-article__item">Трилогия приквелов</li>
+                <li class="container-article__item">Трилогия сиквелов</li>
+            </ul>
+        </article>
+
+        <article class="container-article__block">
+            <h2 class="container-article__header">Article 2</h2>
+            <ol class="container-article__list ordered">
+                <li class="container-article__item">Эпизод IV — Новая надежда</li>
+                <li class="container-article__item">Эпизод V — Империя наносит ответный удар</li>
+                <li class="container-article__item">Эпизод VI — Возвращение Джедая</li>
+            </ol>
+        </article>
+    </main>
+
+    <footer>
+        <h1>Footer</h1>
+    </footer>
+</body>
 </html>
