--- a/index.html
+++ b/index.html
@@ -3,8 +3,25 @@
 <html lang="ru">
     <head>
         <link rel="stylesheet" href="./assets/css/main.css">
+        <link rel="stylesheet" href="./03-lection1/01-button/normalise.css">
+        <link rel="stylesheet" href="./components/page/page.css">
+        <title>Page</title>
     </head>
     <body>
+        <header class="header">
+            <h1 class="header__title">Reusable component library</h1>
+        </header>
+
+        <main>
+            <div  class="container"></div>
+        </main>
+
+        <footer class="footer">
+            <h2 class="footer__title">About</h2>
+            <p class="footer__text">
+                This project is a collection of professionally designed, pre-built, fully responsive HTML snippets you can drop into your projects. Get started by checking out our free preview components, or browsing the PNG previews in the categories you're most curious about.
+            </p>
+        </footer>
 
     </body>
 </html>
