Made changes in assets, components

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <html lang="ru">
     <head>
         <link rel="stylesheet" href="./assets/css/main.css">
-        <link rel="stylesheet" href="./components/page/page.css">
+        <link rel="stylesheet" href="./components/page/header.css">
+        <link rel="stylesheet" href="./components/page/container.css">
+        <link rel="stylesheet" href="./components/page/footer.css">
         <title>Page</title>
     </head>
     <body>
