made the edits of Nov 14th.

--- a/index.html
+++ b/index.html
@@ -4,24 +4,29 @@
     <head>
         <link rel="stylesheet" href="./assets/css/main.css">
         <link rel="stylesheet" href="./components/page/header.css">
-        <link rel="stylesheet" href="./components/page/container.css">
+        <link rel="stylesheet" href="./components/page/content.css">
         <link rel="stylesheet" href="./components/page/footer.css">
         <title>Page</title>
     </head>
     <body>
         <header class="header">
-            <h1 class="header__title">Reusable component library</h1>
+            <div class="header__wrapper">
+                <h1 class="header__title">Reusable component library</h1>
+            </div>
+            
         </header>
 
         <main>
-            <div  class="container"></div>
+            <div  class="content"></div>
         </main>
 
         <footer class="footer">
-            <h2 class="footer__title">About</h2>
-            <p class="footer__text">
-                This project is a collection of professionally designed, pre-built, fully responsive HTML snippets you can drop into your projects. Get started by checking out our free preview components, or browsing the PNG previews in the categories you're most curious about.
-            </p>
+
+                <h2 class="footer__title">About</h2>
+                <p class="footer__text">
+                    This project is a collection of professionally designed, pre-built, fully responsive HTML snippets you can drop into your projects. Get started by checking out our free preview components, or browsing the PNG previews in the categories you're most curious about.
+                </p>
+
         </footer>
 
     </body>
