--- a/index.html
+++ b/index.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
 <!-- Главная страница -->
 <html lang="ru">
-    <head>
-        <link rel="stylesheet" href="./assets/css/main.css">
-        <link rel="stylesheet" href="./components/page/header.css">
-        <link rel="stylesheet" href="./components/page/content.css">
-        <link rel="stylesheet" href="./components/page/footer.css">
-        <title>Page</title>
-    </head>
-    <body>
+
+<head>
+    <link rel="stylesheet" href="./assets/css/main.css">
+    <link rel="stylesheet" href="./components/page/header.css">
+    <link rel="stylesheet" href="./components/page/content.css">
+    <link rel="stylesheet" href="./components/page/footer.css">
+    <title>Page</title>
+</head>
+
+<body>
+    <div class="wrapper">
         <header class="header">
-            <div class="header__wrapper">
-                <h1 class="header__title">Reusable component library</h1>
-            </div>
-            
+            <h1 class="header__title">Reusable component library</h1>
         </header>
 
         <main>
-            <div  class="content"></div>
+            <div class="content"></div>
         </main>
 
         <footer class="footer">
-
-                <h2 class="footer__title">About</h2>
-                <p class="footer__text">
-                    This project is a collection of professionally designed, pre-built, fully responsive HTML snippets you can drop into your projects. Get started by checking out our free preview components, or browsing the PNG previews in the categories you're most curious about.
-                </p>
-
+            <h2 class="footer__title">About</h2>
+            <p class="footer__text">
+                This project is a collection of professionally designed, pre-built, fully responsive HTML snippets you
+                can drop into your projects. Get started by checking out our free preview components, or browsing the
+                PNG previews in the categories you're most curious about.
+            </p>
         </footer>
+    </div>
+</body>
 
-    </body>
 </html>
