--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
 
 <head>
     <link rel="stylesheet" href="./assets/css/main.css">
-    <link rel="stylesheet" href="./components/wrapper/wrapper.css">
-    <link rel="stylesheet" href="./components/header/header.css">
-    <link rel="stylesheet" href="./components/content/content.css">
-    <link rel="stylesheet" href="./components/footer/footer.css">
+   
     <title>Page</title>
 </head>
 
 <body>
     <div class="wrapper">
         <header class="header">
-            <h1 class="header__title">Reusable component library</h1>
+            <div class="container">
+                <h1 class="header__title">Reusable component library</h1>
+            </div>
         </header>
 
         <main>
@@ -22,12 +21,16 @@
         </main>
 
         <footer class="footer">
-            <h2 class="footer__title">About</h2>
-            <p class="footer__text">
-                This project is a collection of professionally designed, pre-built, fully responsive HTML snippets you
-                can drop into your projects. Get started by checking out our free preview components, or browsing the
-                PNG previews in the categories you're most curious about.
-            </p>
+            <div class="container">
+                <h2 class="footer__title">About</h2>
+                <p class="footer__text">
+                    This project is a collection of professionally designed, pre-built, fully responsive HTML snippets
+                    you
+                    can drop into your projects. Get started by checking out our free preview components, or browsing
+                    the
+                    PNG previews in the categories you're most curious about.
+                </p>
+            </div>
         </footer>
     </div>
 </body>
