--- a/04-lection2/01-histogram/index.html
+++ b/04-lection2/01-histogram/index.html
@@ -19,20 +19,20 @@
             </div>
 
             <div class="histogram__body">
-                <div class="bar" style="height: 60%;"></div>
-                <div class="bar" style="height: 40%;"></div>
-                <div class="bar" style="height: 80%;"></div>
-                <div class="bar" style="height: 30%;"></div>
-                <div class="bar" style="height: 90%;"></div>
-                <div class="bar" style="height: 50%;"></div>
-                <div class="bar" style="height: 70%;"></div>
-                <div class="bar" style="height: 60%;"></div>
-                <div class="bar" style="height: 40%;"></div>
-                <div class="bar" style="height: 80%;"></div>
-                <div class="bar" style="height: 30%;"></div>
-                <div class="bar" style="height: 90%;"></div>
-                <div class="bar" style="height: 50%;"></div>
-                <div class="bar" style="height: 70%;"></div>
+                <div class="histogram__bar" style="height: 60%;"></div>
+                <div class="histogram__bar" style="height: 40%;"></div>
+                <div class="histogram__bar" style="height: 80%;"></div>
+                <div class="histogram__bar" style="height: 30%;"></div>
+                <div class="histogram__bar" style="height: 90%;"></div>
+                <div class="histogram__bar" style="height: 50%;"></div>
+                <div class="histogram__bar" style="height: 70%;"></div>
+                <div class="histogram__bar" style="height: 60%;"></div>
+                <div class="histogram__bar" style="height: 40%;"></div>
+                <div class="histogram__bar" style="height: 80%;"></div>
+                <div class="histogram__bar" style="height: 30%;"></div>
+                <div class="histogram__bar" style="height: 90%;"></div>
+                <div class="histogram__bar" style="height: 50%;"></div>
+                <div class="histogram__bar" style="height: 70%;"></div>
             </div>
 
         </div>
