--- a/04-lection2/02-skeleton/index.html
+++ b/04-lection2/02-skeleton/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <!-- Страница со скелетоном -->
 <html lang="ru">
-    <head>
-        <link rel="stylesheet" href="../../assets/css/main.css">
-        <link rel="stylesheet" href="./skeleton.css">
-    </head>
-    <body>
 
-    </body>
+<head>
+    <link rel="stylesheet" href="../../assets/css/main.css">
+    <link rel="stylesheet" href="./skeleton.css">
+</head>
+
+<body>
+    <div class="container">
+        <div class="skeleton">
+            <div class="skeleton__header">
+                <div class="skeleton__userpic"></div>
+                <div class="skeleton__user-value">
+                    <div class="skeleton__user-value-first"></div>
+                    <div class="skeleton__user-value-second"></div>
+                </div>
+            </div>
+
+            <div class="skeleton__body">
+                <div class="skeleton__body-first"></div>
+                <div class="skeleton__body-second"></div>
+            </div>
+        </div>
+    </div>
+
+
+</body>
+
 </html>
