--- a/04-lection2/02-skeleton/index.html
+++ b/04-lection2/02-skeleton/index.html
@@ -13,8 +13,8 @@
             <div class="skeleton__header">
                 <div class="skeleton__userpic"></div>
                 <div class="skeleton__user-value">
-                    <div class="skeleton__user-value-first"></div>
-                    <div class="skeleton__user-value-second"></div>
+                    <div class="skeleton__line skeleton__line--first"></div>
+                    <div class="skeleton__line skeleton__line--second"></div>
                 </div>
             </div>
 
