--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         </header>
 
         <main>
-            <div class="content"></div>
+            <div class="content">
+                
+            </div>
         </main>
 
         <footer class="footer">
