Changed BEM names

--- a/04-lection2/02-skeleton/index.html
+++ b/04-lection2/02-skeleton/index.html
@@ -13,14 +13,14 @@
             <div class="skeleton__header">
                 <div class="skeleton__userpic"></div>
                 <div class="skeleton__user-value">
-                    <div class="skeleton__line skeleton__line_small"></div>
-                    <div class="skeleton__line skeleton__line_large"></div>
+                    <div class="skeleton__line skeleton__line-small"></div>
+                    <div class="skeleton__line skeleton__line-large"></div>
                 </div>
             </div>
 
             <div class="skeleton__body">
-                <div class="skeleton__body_first"></div>
-                <div class="skeleton__body_second"></div>
+                <div class="skeleton__body-first"></div>
+                <div class="skeleton__body-second"></div>
             </div>
         </div>
     </div>
