Reorganised code by German's recommendations

--- a/04-lection2/02-skeleton/index.html
+++ b/04-lection2/02-skeleton/index.html
@@ -18,9 +18,9 @@
                 </div>
             </div>
 
-            <div class="skeleton__body">
-                <div class="skeleton__body-first"></div>
-                <div class="skeleton__body-second"></div>
+            <div class="skeleton__user-value">
+                <div class="skeleton__line skeleton__line-first"></div>
+                <div class="skeleton__line skeleton__line-second"></div>
             </div>
         </div>
     </div>
