Have problems with positioning. Didn't finish with titles

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <link rel="stylesheet" href="./assets/css/main.css">
-   
+
     <title>Page</title>
 </head>
 
@@ -17,8 +17,38 @@
         </header>
 
         <main>
-            <div class="content">
-                
+            <div class="container">
+                <div class="content">
+                    
+                    <!-- First row of cards -->
+                    <div class="card">
+                        <div class="card__item">
+                            <p class="card__title">Tooltip</p>
+                        </div>
+                        <div class="card__item">
+                            <p class="card__title">Custom form elements</p>
+                        </div>
+
+                        <div class="card__item">
+                            <p class="card__title">Calendar</p>
+                        </div>
+                    </div>
+
+                    <!-- Second row of cards -->
+                    <div class="card">
+                        <div class="card__item">
+                            <p class="card__title">Modal dialog</p>
+                        </div>
+
+                        <div class="card__item">
+                            <p class="card__title">Histogram</p>
+                        </div>
+
+                        <div class="card__item">
+                            <p class="card__title">Avatar</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </main>
 
