Made cards adaptive

--- a/index.html
+++ b/index.html
@@ -17,53 +17,55 @@
         </header>
 
         <main>
-            <div class="container">
-                <div class="content">
-                    
-                    <!-- First row of cards -->
-                    <div class="card">
-                        <div class="card__item">
-                            <p class="card__title">Tooltip</p>
-                        </div>
-                        <div class="card__item">
-                            <p class="card__title">Custom form elements</p>
-                        </div>
+            <div class="content">
+                <div class="container"></div>
+                <!-- First row of cards -->
+                <div class="card">
+                    <div class="card__item">
+                        <p class="card__title">Tooltip</p>
+                    </div>
+                    <div class="card__item">
+                        <p class="card__title">Custom form elements</p>
+                    </div>
 
-                        <div class="card__item">
-                            <p class="card__title">Calendar</p>
+                    <div class="card__item">
+                        <p class="card__title">Calendar</p>
+                    </div>
+                </div>
+
+                <!-- Second row of cards -->
+                <div class="card">
+                    <div class="card__item">
+                        <p class="card__title">Modal dialog</p>
+                    </div>
+
+                    <div class="card__item">
+                        <p class="card__title">Histogram</p>
+                        <div class="card__histogram">
+                            
                         </div>
                     </div>
 
-                    <!-- Second row of cards -->
-                    <div class="card">
-                        <div class="card__item">
-                            <p class="card__title">Modal dialog</p>
-                        </div>
-
-                        <div class="card__item">
-                            <p class="card__title">Histogram</p>
-                        </div>
-
-                        <div class="card__item">
-                            <p class="card__title">Avatar</p>
-                        </div>
+                    <div class="card__item">
+                        <p class="card__title">Avatar</p>
                     </div>
                 </div>
             </div>
-        </main>
+    </div>
+    </main>
 
-        <footer class="footer">
-            <div class="container">
-                <h2 class="footer__title">About</h2>
-                <p class="footer__text">
-                    This project is a collection of professionally designed, pre-built, fully responsive HTML snippets
-                    you
-                    can drop into your projects. Get started by checking out our free preview components, or browsing
-                    the
-                    PNG previews in the categories you're most curious about.
-                </p>
-            </div>
-        </footer>
+    <footer class="footer">
+        <div class="container">
+            <h2 class="footer__title">About</h2>
+            <p class="footer__text">
+                This project is a collection of professionally designed, pre-built, fully responsive HTML snippets
+                you
+                can drop into your projects. Get started by checking out our free preview components, or browsing
+                the
+                PNG previews in the categories you're most curious about.
+            </p>
+        </div>
+    </footer>
     </div>
 </body>
 
