Optimised code structure

--- a/index.html
+++ b/index.html
@@ -16,34 +16,29 @@
             </div>
         </header>
 
-        <main>
-            <div class="content">
-                <div class="container"></div>
-                <!-- First row of cards -->
-                <div class="card">
-                    <div class="card__item">
+        <main class="content">
+            <div class="container">
+                <div class="card__list">
+                    <div class="card">
                         <div class="card__preview"></div>
                         <p class="card__title">Tooltip</p>
                     </div>
-                    <div class="card__item">
+                    <div class="card">
                         <div class="card__preview"></div>
                         <p class="card__title">Custom form elements</p>
                     </div>
 
-                    <div class="card__item">
+                    <div class="card">
                         <div class="card__preview"></div>
                         <p class="card__title">Calendar</p>
                     </div>
-                </div>
 
-                <!-- Second row of cards -->
-                <div class="card">
-                    <div class="card__item">
+                    <div class="card">
                         <div class="card__preview"></div>
                         <p class="card__title">Modal dialog</p>
                     </div>
 
-                    <div class="card__item">
+                    <div class="card">
                         <div class="card__preview">
                             <div class="histogram">
                                 <div class="histogram__header">
@@ -53,7 +48,6 @@
                                     </div>
                                     <a href="#" class="histogram__link">View all</a>
                                 </div>
-
                                 <div class="histogram__body">
                                     <div class="histogram__bar" style="height: 60%;"></div>
                                     <div class="histogram__bar" style="height: 40%;"></div>
@@ -70,33 +64,31 @@
                                     <div class="histogram__bar" style="height: 50%;"></div>
                                     <div class="histogram__bar" style="height: 70%;"></div>
                                 </div>
-
                             </div>
                         </div>
                         <p class="card__title">Histogram</p>
                     </div>
 
-                    <div class="card__item">
-                        <div class="card__preview"></div>
-                        <p class="card__title">Avatar</p>
-                    </div>
+                <div class="card">
+                    <div class="card__preview"></div>
+                    <p class="card__title">Avatar</p>
                 </div>
-            </div>
-    </div>
-    </main>
 
-    <footer class="footer">
-        <div class="container">
-            <h2 class="footer__title">About</h2>
-            <p class="footer__text">
-                This project is a collection of professionally designed, pre-built, fully responsive HTML snippets
-                you
-                can drop into your projects. Get started by checking out our free preview components, or browsing
-                the
-                PNG previews in the categories you're most curious about.
-            </p>
-        </div>
-    </footer>
+            </div>
+        </main>
+
+        <footer class="footer">
+            <div class="container">
+                <h2 class="footer__title">About</h2>
+                <p class="footer__text">
+                    This project is a collection of professionally designed, pre-built, fully responsive HTML snippets
+                    you
+                    can drop into your projects. Get started by checking out our free preview components, or browsing
+                    the
+                    PNG previews in the categories you're most curious about.
+                </p>
+            </div>
+        </footer>
     </div>
 </body>
 
