Changer hierarchy by BEM and added contant as a component

--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
 
         <main class="content">
             <div class="container">
-                <div class="card__list">
+                <div class="content__wrapper">
                     <div class="card">
                         <div class="card__preview"></div>
                         <p class="card__title">Tooltip</p>
                     </div>
+                    
                     <div class="card">
                         <div class="card__preview"></div>
                         <p class="card__title">Custom form elements</p>
