--- a/05-lection3/03-calendar/index.html
+++ b/05-lection3/03-calendar/index.html
@@ -7,6 +7,68 @@
         <title>Calendar</title>
     </head>
     <body>
+        <div class="container">
+            <div class="calendar">
+                <div class="calendar__header">
+                    <span class="calendar__title">October 2019</span>
+                </div>
 
+                <div class="calendar__body">
+                    <div class="calendar__days">
+                        <div class="calendar__day">Mon</div>
+                        <div class="calendar__day">Tue</div>
+                        <div class="calendar__day">Wed</div>
+                        <div class="calendar__day">Thu</div>
+                        <div class="calendar__day">Fri</div>
+                        <div class="calendar__day">Sat</div>
+                        <div class="calendar__day">Sun</div>
+                    </div>
+                    
+
+                    <div class="calendar__dates">
+                        <div class="calendar__date"></div>
+                        <div class="calendar__date"></div>
+                        <div class="calendar__date"></div>
+                        <div class="calendar__date"></div>
+                        <div class="calendar__date">1</div>
+                        <div class="calendar__date">2</div>
+                        <div class="calendar__date">3</div>
+                        <div class="calendar__date">4</div>
+                        <div class="calendar__date">5</div>
+                        <div class="calendar__date">6</div>
+                        <div class="calendar__date">7</div>
+                        <div class="calendar__date">8</div>
+                        <div class="calendar__date">9</div>
+                        <div class="calendar__date">10</div>
+                        <div class="calendar__date">11</div>
+                        <div class="calendar__date">12</div>
+                        <div class="calendar__date">13</div>
+                        <div class="calendar__date">14</div>
+                        <div class="calendar__date">15</div>
+                        <div class="calendar__date">16</div>
+                        <div class="calendar__date">17</div>
+                        <div class="calendar__date">18</div>
+                        <div class="calendar__date">19</div>
+                        <div class="calendar__date">20</div>
+                        <div class="calendar__date">21</div>
+                        <div class="calendar__date">22</div>
+                        <div class="calendar__date">23</div>
+                        <div class="calendar__date">24</div>
+                        <div class="calendar__date">25</div>
+                        <div class="calendar__date">26</div>
+                        <div class="calendar__date">27</div>
+                        <div class="calendar__date">28</div>
+                        <div class="calendar__date">29</div>
+                        <div class="calendar__date">30</div>
+                        <div class="calendar__date">31</div>
+
+                    </div>
+                </div>
+
+                
+
+                </div>
+            </div>
+        </div>
     </body>
 </html>
