--- a/05-lection3/03-calendar/index.html
+++ b/05-lection3/03-calendar/index.html
@@ -47,12 +47,12 @@
                         <div class="calendar__date">15</div>
                         <div class="calendar__date">16</div>
                         <div class="calendar__date">17</div>
-                        <div class="calendar__date">18</div>
-                        <div class="calendar__date">19</div>
-                        <div class="calendar__date">20</div>
-                        <div class="calendar__date">21</div>
-                        <div class="calendar__date">22</div>
-                        <div class="calendar__date">23</div>
+                        <div class="calendar__date calendar__date_blue">18</div>
+                        <div class="calendar__date calendar__date_light-blue">19</div>
+                        <div class="calendar__date calendar__date_light-blue">20</div>
+                        <div class="calendar__date calendar__date_light-blue">21</div>
+                        <div class="calendar__date calendar__date_light-blue">22</div>
+                        <div class="calendar__date calendar__date_blue">23</div>
                         <div class="calendar__date">24</div>
                         <div class="calendar__date">25</div>
                         <div class="calendar__date">26</div>
