--- a/05-lection3/03-calendar/index.html
+++ b/05-lection3/03-calendar/index.html
@@ -15,52 +15,50 @@
                 <span class="calendar__title">October 2019</span>
             </div>
 
-            <div class="calendar__body">
-                <div class="calendar__item">
-                    <div class="calendar__item calendar__item_day">Mon</div>
-                    <div class="calendar__item calendar__item_day">Tue</div>
-                    <div class="calendar__item calendar__item_day">Wed</div>
-                    <div class="calendar__item calendar__item_day">Thu</div>
-                    <div class="calendar__item calendar__item_day">Fri</div>
-                    <div class="calendar__item calendar__item_day">Sat</div>
-                    <div class="calendar__item calendar__item_day">Sun</div>
+            <div class="calendar__items">
+                <div class="calendar__item calendar__item_day">Mon</div>
+                <div class="calendar__item calendar__item_day">Tue</div>
+                <div class="calendar__item calendar__item_day">Wed</div>
+                <div class="calendar__item calendar__item_day">Thu</div>
+                <div class="calendar__item calendar__item_day">Fri</div>
+                <div class="calendar__item calendar__item_day">Sat</div>
+                <div class="calendar__item calendar__item_day">Sun</div>
 
-                    <div class="calendar__item calendar__item_date"></div>
-                    <div class="calendar__item calendar__item_date"></div>
-                    <div class="calendar__item calendar__item_date"></div>
-                    <div class="calendar__item calendar__item_date"></div>
-                    <div class="calendar__item calendar__item_date">1</div>
-                    <div class="calendar__item calendar__item_date">2</div>
-                    <div class="calendar__item calendar__item_date">3</div>
-                    <div class="calendar__item calendar__item_date">4</div>
-                    <div class="calendar__item calendar__item_date">5</div>
-                    <div class="calendar__item calendar__item_date">6</div>
-                    <div class="calendar__item calendar__item_date">7</div>
-                    <div class="calendar__item calendar__item_date">8</div>
-                    <div class="calendar__item calendar__item_date">9</div>
-                    <div class="calendar__item calendar__item_date">10</div>
-                    <div class="calendar__item calendar__item_date">11</div>
-                    <div class="calendar__item calendar__item_date">12</div>
-                    <div class="calendar__item calendar__item_date">13</div>
-                    <div class="calendar__item calendar__item_date">14</div>
-                    <div class="calendar__item calendar__item_date">15</div>
-                    <div class="calendar__item calendar__item_date">16</div>
-                    <div class="calendar__item calendar__item_date">17</div>
-                    <div class="calendar__item calendar__item_date calendar__item_blue">18</div>
-                    <div class="calendar__item calendar__item_date calendar__item_light-blue">19</div>
-                    <div class="calendar__item calendar__item_date calendar__item_light-blue">20</div>
-                    <div class="calendar__item calendar__item_date calendar__item_light-blue">21</div>
-                    <div class="calendar__item calendar__item_date calendar__item_light-blue">22</div>
-                    <div class="calendar__item calendar__item_date calendar__item_blue">23</div>
-                    <div class="calendar__item calendar__item_date">24</div>
-                    <div class="calendar__item calendar__item_date">25</div>
-                    <div class="calendar__item calendar__item_date">26</div>
-                    <div class="calendar__item calendar__item_date">27</div>
-                    <div class="calendar__item calendar__item_date">28</div>
-                    <div class="calendar__item calendar__item_date">29</div>
-                    <div class="calendar__item calendar__item_date">30</div>
-                    <div class="calendar__item calendar__item_date">31</div>
-                </div>
+                <div class="calendar__item calendar__item_date"></div>
+                <div class="calendar__item calendar__item_date"></div>
+                <div class="calendar__item calendar__item_date"></div>
+                <div class="calendar__item calendar__item_date"></div>
+                <div class="calendar__item calendar__item_date">1</div>
+                <div class="calendar__item calendar__item_date">2</div>
+                <div class="calendar__item calendar__item_date">3</div>
+                <div class="calendar__item calendar__item_date">4</div>
+                <div class="calendar__item calendar__item_date">5</div>
+                <div class="calendar__item calendar__item_date">6</div>
+                <div class="calendar__item calendar__item_date">7</div>
+                <div class="calendar__item calendar__item_date">8</div>
+                <div class="calendar__item calendar__item_date">9</div>
+                <div class="calendar__item calendar__item_date">10</div>
+                <div class="calendar__item calendar__item_date">11</div>
+                <div class="calendar__item calendar__item_date">12</div>
+                <div class="calendar__item calendar__item_date">13</div>
+                <div class="calendar__item calendar__item_date">14</div>
+                <div class="calendar__item calendar__item_date">15</div>
+                <div class="calendar__item calendar__item_date">16</div>
+                <div class="calendar__item calendar__item_date">17</div>
+                <div class="calendar__item calendar__item_date calendar__item_blue">18</div>
+                <div class="calendar__item calendar__item_date calendar__item_light-blue">19</div>
+                <div class="calendar__item calendar__item_date calendar__item_light-blue">20</div>
+                <div class="calendar__item calendar__item_date calendar__item_light-blue">21</div>
+                <div class="calendar__item calendar__item_date calendar__item_light-blue">22</div>
+                <div class="calendar__item calendar__item_date calendar__item_blue">23</div>
+                <div class="calendar__item calendar__item_date">24</div>
+                <div class="calendar__item calendar__item_date">25</div>
+                <div class="calendar__item calendar__item_date">26</div>
+                <div class="calendar__item calendar__item_date">27</div>
+                <div class="calendar__item calendar__item_date">28</div>
+                <div class="calendar__item calendar__item_date">29</div>
+                <div class="calendar__item calendar__item_date">30</div>
+                <div class="calendar__item calendar__item_date">31</div>
             </div>
         </div>
     </div>
