--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="wrapper">
         <header class="header">
             <div class="container">
+                <img class="header__logo" src="./assets/images/logo.svg" alt="logo">
                 <h1 class="header__title">Reusable component library</h1>
             </div>
         </header>
