--- a/index.html
+++ b/index.html
@@ -147,7 +147,11 @@
                     </a>
 
                     <a href="#" class="card">
-                        <div class="card__preview"></div>
+                        <div class="card__preview">
+                            <div class="avatar">
+                                <img class="avatar__img" src="./assets/images/avatar.jpg" alt="userpic photo">
+                            </div>
+                        </div>
                         <p class="card__title">Avatar</p>
                     </a>
 
