--- a/pages/template.html
+++ b/pages/template.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <main class="content content_transprent">
+    <main class="content content_padding">
         <div class="container">
             <div class="template">
                 <div class="header header_transparent">
