--- a/07-lection5/01-checkbox/index.html
+++ b/07-lection5/01-checkbox/index.html
@@ -1,11 +1,59 @@
 <!DOCTYPE html>
 <!-- Страница чекбокса -->
 <html lang="ru">
-    <head>
-        <link rel="stylesheet" href="../../assets/css/main.css">
-        <link rel="stylesheet" href="./checkbox.css">
-    </head>
-    <body>
 
-    </body>
+<head>
+    <link rel="stylesheet" href="../../assets/css/main.css">
+    <link rel="stylesheet" href="./checkbox.css">
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Checkbox</title>
+
+    <script src="https://unpkg.com/feather-icons"></script>
+</head>
+
+<body>
+    <div class="container">
+        <label class="checkbox">
+            <input class="checkbox__input" type="checkbox">
+            <div class="checkbox__state">
+                <div class="checkbox__square">
+                    <i data-feather="check" class="checkbox__icon"></i>
+                </div>
+                <div class="checkbox__label">Default</div>
+            </div>
+        </label>
+
+        <label class="checkbox">
+            <input class="checkbox__input" type="checkbox" checked>
+            <div class="checkbox__state">
+                <div class="checkbox__square">
+                    <i data-feather="check" class="checkbox__icon"></i>
+                </div>
+                <div class="checkbox__label">Checked</div>
+            </div>
+        </label>
+
+        <label class="checkbox">
+            <input class="checkbox__input" type="checkbox" disabled>
+            <div class="checkbox__state">
+                <div class="checkbox__square">
+                    <i data-feather="check" class="checkbox__icon"></i>
+                </div>
+                <div class="checkbox__label">Disabled</div>
+            </div>
+        </label>
+    </div>
+    
+
+    <script>
+        feather.replace({
+            width: '1.2rem',
+            height: '1.75rem'
+        });          
+    </script>
+</body>
+
 </html>
