--- a/07-lection5/02-radio/index.html
+++ b/07-lection5/02-radio/index.html
@@ -1,11 +1,60 @@
 <!DOCTYPE html>
 <!-- Страница радио -->
 <html lang="ru">
-    <head>
-        <link rel="stylesheet" href="../../assets/css/main.css">
-        <link rel="stylesheet" href="./radio.css">
-    </head>
-    <body>
 
-    </body>
+<head>
+    <link rel="stylesheet" href="../../assets/css/main.css">
+    <link rel="stylesheet" href="./radio.css">
+
+    <title>Radio</title>
+
+    <script src="https://unpkg.com/feather-icons"></script>
+</head>
+
+<body>
+    <div class="container">
+        <fieldset class="radio">
+            <legend class="radio__legend_hidden"></legend>
+            <label class="radio__label">
+                <input class="radio__input" type="radio" name="radio" value="1">
+
+                <div class="radio__state">
+                    <div class="radio__circle">
+                        <i class="radio__icon" data-feather="circle"></i>
+                    </div> 
+                    <p class="radio__title">Default</p>
+                </div>
+            </label>
+
+            <label class="radio__label">
+                <input class="radio__input" type="radio" name="radio" value="2" checked>
+
+                <div class="radio__state">
+                    <div class="radio__circle">
+                        <i class="radio__icon" data-feather="circle"></i>
+                    </div> 
+                    <p class="radio__title">Selected</p>
+                </div>     
+                
+                
+            </label>
+
+            <label class="radio__label">
+                <input class="radio__input" type="radio" name="radio" value="3" disabled>
+
+                <div class="radio__state">
+                    <div class="radio__circle">
+                        <i class="radio__icon" data-feather="circle"></i>
+                    </div>
+                    <p class="radio__title">Disabled</p>
+                </div> 
+            </label>
+        </fieldset>
+    </div>
+
+    <script>
+        feather.replace();
+      </script>
+</body>
+
 </html>
