--- a/07-lection5/04-input/index.html
+++ b/07-lection5/04-input/index.html
@@ -4,8 +4,15 @@
     <head>
         <link rel="stylesheet" href="../../assets/css/main.css">
         <link rel="stylesheet" href="./input.css">
-    </head>
-    <body>
 
+        <title>Input</title>
+    </head>
+
+    <body>
+<div class="container">
+    <label class="input">
+        <input type="text" class="input_default">
+    </label>
+</div>
     </body>
 </html>
