--- a/07-lection5/02-radio/index.html
+++ b/07-lection5/02-radio/index.html
@@ -15,7 +15,6 @@
     <div class="container">
 
         <label class="radio">
-            <div class="radio__wrapper">
                 <input class="radio__input" type="radio" name="radio" value="1">
 
                 <div class="radio__state">
@@ -26,7 +25,7 @@
                 </div>
         </label>
 
-        <label class="radio__label">
+        <label class="radio">
             <input class="radio__input" type="radio" name="radio" value="2" checked>
 
             <div class="radio__state">
@@ -37,7 +36,7 @@
             </div>
         </label>
 
-        <label class="radio__label">
+        <label class="radio">
             <input class="radio__input" type="radio" name="radio" value="3" disabled>
 
             <div class="radio__state">
