Created input fields

--- a/07-lection5/04-input/index.html
+++ b/07-lection5/04-input/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./input.css">
 
     <title>Input</title>
+
+    <script src="https://unpkg.com/feather-icons"></script>
 </head>
 
 <body>
@@ -19,10 +21,29 @@
 
         <div class="input">
             <label for="success" class="input__label">Success</label>
-            <input class="input__field input__field_success" type="text" placeholder="Success" id="success">
+            <div class="input-wrapper">
+                <input class="input__field input__field_success" type="text" placeholder="Success" id="success">
+                <i class="input__icon" data-feather="check-circle"></i>
+            </div>
         </div>
 
+        <div class="input">
+            <label for="error" class="input__label">Error</label>
+            <div class="input-wrapper">
+                <input class="input__field input__field_invalid" type="text" placeholder="Error" id="error">
+                <i class="input__icon" data-feather="alert-triangle"></i>
+            </div>
+
+            <div class="input">
+                <label for="disabled" class="input__label">Disable</label>
+                <input class="input__field" type="text" placeholder="Disable" id="default" disabled>
+            </div>
+
     </div>
+
+    <script>
+        feather.replace();
+    </script>
 </body>
 
 </html>
