Add tab navigation structure to index.html

--- a/index.html
+++ b/index.html
@@ -22,6 +22,23 @@
             </div>
         </header>
 
+        <div class="tabs">
+            <div class="container">
+                <input type="radio" id="all" name="tab" checked>
+                <input type="radio" id="elements" name="tab">
+                <input type="radio" id="containers" name="tab">
+                <input type="radio" id="templates" name="tab">
+
+                <nav>
+                    <label for="all">All</label>
+                    <label for="elements">Elements</label>
+                    <label for="containers">Containers</label>
+                    <label for="templates">Templates</label>
+                </nav>
+               
+            </div>
+        </div>
+
         <main class="content">
             <div class="container">
                 <div class="content__wrapper">
