Changed input__control structure concerning icons and common rules of showing

--- a/07-lection5/04-input/index.html
+++ b/07-lection5/04-input/index.html
@@ -21,16 +21,18 @@
 
         <div class="input input_success">
             <label for="success" class="input__label">Success</label>
-            <div class="input-control">
+            <div class="input__control">
                 <input class="input__field" type="text" placeholder="Success" id="success">
                 <i class="input__icon input__icon_success" data-feather="check-circle"></i>
+                <i class="input__icon input__icon_invalid" data-feather="alert-triangle"></i>
             </div>
         </div>
 
         <div class="input input_invalid">
             <label for="error" class="input__label">Error</label>
-            <div class="input-control">
+            <div class="input__control">
                 <input class="input__field" type="text" placeholder="Error" id="error">
+                <i class="input__icon input__icon_success" data-feather="check-circle"></i>
                 <i class="input__icon input__icon_invalid" data-feather="alert-triangle"></i>
             </div>
         </div>
