Added checkboxex in the card

--- a/index.html
+++ b/index.html
@@ -61,7 +61,77 @@
                                 </a>
 
                                 <a href="#" class="card">
-                                    <div class="card__preview"></div>
+                                    <div class="card__preview">
+
+                                        <!-- Checkboxes -->
+                                        <div class="card__alien">
+                                            <label class="checkbox">
+                                                <input class="checkbox__input" type="checkbox">
+                                                <div class="checkbox__state">
+                                                    <div class="checkbox__square">
+                                                        <i data-feather="check" class="checkbox__icon"></i>
+                                                    </div>
+                                                    <div class="checkbox__label">Default</div>
+                                                </div>
+                                            </label>
+
+                                            <label class="checkbox">
+                                                <input class="checkbox__input" type="checkbox" checked>
+                                                <div class="checkbox__state">
+                                                    <div class="checkbox__square">
+                                                        <i data-feather="check" class="checkbox__icon"></i>
+                                                    </div>
+                                                    <div class="checkbox__label">Checked</div>
+                                                </div>
+                                            </label>
+
+                                            <label class="checkbox">
+                                                <input class="checkbox__input" type="checkbox" disabled>
+                                                <div class="checkbox__state">
+                                                    <div class="checkbox__square">
+                                                        <i data-feather="check" class="checkbox__icon"></i>
+                                                    </div>
+                                                    <div class="checkbox__label">Disabled</div>
+                                                </div>
+                                            </label>
+                                        </div>
+
+                                        <!-- Radio -->
+                                        <div class="card__alien">
+                                        <label class="radio">
+                                            <input class="radio__input" type="radio" name="radio" value="1">
+
+                                            <div class="radio__state">
+                                                <div class="radio__circle">
+                                                    <i class="radio__icon" data-feather="circle"></i>
+                                                </div>
+                                                <p class="radio__title">Default</p>
+                                            </div>
+                                        </label>
+
+                                        <label class="radio">
+                                            <input class="radio__input" type="radio" name="radio" value="2" checked>
+
+                                            <div class="radio__state">
+                                                <div class="radio__circle">
+                                                    <i class="radio__icon" data-feather="circle"></i>
+                                                </div>
+                                                <p class="radio__title">Selected</p>
+                                            </div>
+                                        </label>
+
+                                        <label class="radio">
+                                            <input class="radio__input" type="radio" name="radio" value="3" disabled>
+
+                                            <div class="radio__state">
+                                                <div class="radio__circle">
+                                                    <i class="radio__icon" data-feather="circle"></i>
+                                                </div>
+                                                <p class="radio__title">Disabled</p>
+                                            </div>
+                                        </label>
+                                        </div>
+                                    </div>
                                     <p class="card__title">Custom form elements</p>
                                 </a>
 
