--- a/07-lection5/01-checkbox/index.html
+++ b/07-lection5/01-checkbox/index.html
@@ -49,10 +49,7 @@
 
 
     <script>
-        feather.replace({
-            width: '1.2rem',
-            height: '1.2rem'
-        });          
+        feather.replace();          
     </script>
 </body>
 
