Inserted modal window into preview card

--- a/index.html
+++ b/index.html
@@ -206,7 +206,18 @@
                                 </a>
 
                                 <a href="#" class="card">
-                                    <div class="card__preview"></div>
+                                    <div class="card__preview">
+                                        <div class="modal__content modal__content_preview">
+                                            <i data-feather="x" id="modal-close" class="modal__icon"></i>
+                                            
+                                            <h2 class="modal__title">Modal title</h2>
+                                            <p class="modal__text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+                                                Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                                                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                                                consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                                            </p>
+                                        </div>
+                                    </div>
                                     <p class="card__title">Modal dialog</p>
                                 </a>
 
