--- a/09-lection7/01-burger-menu/index.html
+++ b/09-lection7/01-burger-menu/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- Страница бургер-меню -->
 <html lang="ru">
-
+<title>Burger</title>
 <head>
     <link rel="stylesheet" href="../../assets/css/main.css">
     <link rel="stylesheet" href="./burger-menu.css">
